---------------------------------------------------------------------------------------------------
Version: 0.4.0
  Features:
    - New query filters: sinks. Automatic removal of (generated) recipes destroying items.

---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2020-12-02
  Info:
    - Migration to Factorio 1.1.

---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 2020-12-01
  Features:
    - Automated GUI sanity-check & recovery: improved stability against #?%@!y-coded mods.
    - New toggleable shortcut (bottom-right button) to open/close Dana. (https://raw.githubusercontent.com/vsaulue/factorio-dana/assets/v0_2/dana-shortcut.png)
    - The Escape key now closes the mod.
    - Support of LuaPlayer::opened API. Other mods can close Dana when they want screen space, and inversely.
    - New user mod setting: enable/disable the top-left mod-gui button.
  Changes:
    - Query frames can be dragged.
    - Removed the selection tool shortcut (bottom-right button).
    - Top-left button now uses the standard mod-gui format with icon.
  Bugfixes:
    - Fix crash caused by mods teleporting players to different surfaces (again).

---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2020-08-21
  Changes:
    - If a script teleports the player to another surface, Dana will close its GUI.
  Bugfixes:
    - Migration scripts are able to recover from GUI corruptions caused by other scripts (https://mods.factorio.com/mod/dana/discussion/5f36f18423fa1c25793a291f).
    - Fix crash caused by scripts teleporting players to other surfaces. (https://mods.factorio.com/mod/dana/discussion/5f3d95624ab56be26b4476a8).

---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2020-08-16
  Bugfixes: