@@ -78,6 +78,8 @@ howToMake=How to make ...
 usagesOf=Usages of ...
 
 techFullGraph=[Tech] Full tech graph
+techHowToMake=[Tech] How to unlock...
+techUsagesOf=[Tech] Techs unlocked by...
 
 [dana.layouts.layer.linkCategories]
 
